--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <script src="https://unpkg.com/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-sprite-particles-component@^0.5.4/aframe-sprite-particles-component.js"></script>
     <script src="https://unpkg.com/reconnecting-websocket@4.4.0/dist/reconnecting-websocket-iife.min.js"></script>
-    <script src="./utils.js"></script>
+
+    <script src="./lib/planets.js"></script>
+    <script src="./lib/utils.js"></script>
     <script src="./lib/websocket.js"></script>
+
     <script type="module">
       import { createApp, reactive } from "https://unpkg.com/petite-vue?module";
-      import { generatePlanet } from "./lib/planets.js";
 
       const animation = AFRAME.ANIME;
       const speed = 1000; // Edit to 1000 for normal speed
@@ -352,7 +354,7 @@
           Back to start
         </button>
       </p>
-      <div>{{ secondsToTimeString(r.time) }} / {{ r.eventCounter }}</div>
+      <div>{{ timestring(r.time) }} / {{ r.eventCounter }}</div>
       <p />
       <div v-for="p,key in r.planets" :style="{opacity: p.visible ? 1 : 0.4}">
         {{ key }}
@@ -400,7 +402,7 @@
         z-index: 20000;
       "
     >
-      <p>{{ secondsToTimeString(r.time) }}</p>
+      <p>{{ timestring(r.time) }}</p>
       <input
         type="range"
         v-model.number="r.userZMultipler"
