--- a/websocket-send-time.html
+++ b/websocket-send-time.html
@@ -5,6 +5,7 @@
     <title>Websocket send time</title>
     <script src="https://unpkg.com/reconnecting-websocket@4.4.0/dist/reconnecting-websocket-iife.min.js"></script>
     <script src="/lib/websocket.js"></script>
+    <script src="/lib/utils.js"></script>
 
     <script>
       let time = 0,
@@ -21,16 +22,24 @@
       }
 
       function sendTime() {
-        doSend(JSON.stringify({ TT_time: time }));
+        const frequency = parseInt(document.querySelector("#frequency").value);
+        doSend(JSON.stringify({ TT_time: time, frequency }));
         document.querySelector("#timeLabel").innerHTML = time.toString();
+        document.querySelector("#timeLabel2").innerHTML = timestring(
+          time.toString()
+        );
       }
 
       function startClock() {
+        const frequency = parseInt(document.querySelector("#frequency").value);
+        const playbackRate = 1000 / frequency;
+
+        document.querySelector("#audio").playbackRate = playbackRate;
+        document.querySelector("#audio").play();
+
         const startTime =
           parseInt(document.querySelector("#minutes").value) * 60 +
           parseInt(document.querySelector("#seconds").value);
-
-        const frequency = parseInt(document.querySelector("#frequency").value);
 
         console.log("Start from second: ", startTime);
         console.log("Start with frequency (ms): ", frequency);
@@ -44,6 +53,9 @@
       }
 
       function stopClock() {
+        document.querySelector("#audio").pause();
+        document.querySelector("#audio").currentTime = 0;
+
         if (ticker > 0) {
           clearInterval(ticker);
         }
@@ -58,20 +70,30 @@
     Start time from: <input id="minutes" type="text" size="1" value="00" /> :
     <input id="seconds" type="text" size="1" value="00" />
     <br />
-    Start time from: <input id="minutes" type="text" size="2" value="00" /> :
-    <input id="seconds" type="text" size="2" value="00" />
-    <br />
     Send frequency (ms)
     <br />
     <input id="frequency" type="text" size="4" value="1000" />
     <br />
+    <br />
     <button id="startButton" onclick="startClock()">Start</button>
     <button id="stopButton" onclick="stopClock()">Stop</button>
     <br />
-    Time: <label id="timeLabel"></label>
+    <br />
+    Time (sec) <label id="timeLabel"></label>
+    <br />
+    Time (sec)
+    <label id="timeLabel2"></label>
+    <br />
     <br />
     Websocket status:<label id="status">unknown</label>
     <br />
+    <br />
+    <audio
+      id="audio"
+      muted
+      src="https://elektron.fra1.cdn.digitaloceanspaces.com/assets/timetrip.mp3"
+      controls
+    />
     <!-- <button id="connectButton" onclick="doConnect()">Connect</button> -->
   </body>
 </html>
